# survival

./: .gitignore  .gitmodules  CMakeLists.txt  setup.py
src/: camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  chunk_mesh_utils.cpp  chunk_mesh_utils.hpp  control_settings.cpp  control_settings.hpp  floor_tile.cpp  floor_tile.hpp  hud.cpp  hud.hpp  key_bindings.cpp  key_bindings.hpp  level.cpp  level.hpp  main.cpp  tree_mesh.cpp  tree_mesh.hpp
src/shaders/: chunk_shader.frag.glsl  chunk_shader.vert.glsl
